# ERoom

./: README.md
ChatClient/: CMakeLists.txt  main.cpp  sockhelpers.cpp  sockhelpers.h
ChatServer/: CMakeLists.txt  Channel.cpp  Server.h  helperheaders.h  sockhelpers.cpp  sockhelpers.h
Client/: CMakeLists.txt  main.cpp  sockhelpers.cpp
chatService/: CMakeLists.txt  Channel.h  Server.cpp  helperheaders.h  main.cpp  sockhelpers.cpp  sockhelpers.h  test.txt
chatService/ChatClient/: main.cpp  sockhelpers.h
chatService/chatService/: output.txt  sockhelpers.cpp  sockhelpers.h  uniform_buffer_object.txt
